--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,39 @@
+.Header {
+	display: flex;
+	justify-content: space-around;
+	/* align-items: center; */
+	background-color: #333;
 
+	padding: 20px 0;
+	color: #fff;
+	font-size: 16px;
+}
 .Header--tag {
 	margin: 0;
 	font-family: "Hanalei Fill", cursive;
+}
+
+.Header--cart {
+	font-size: 20px;
+	display: flex;
+	align-items: center;
+
+	position: relative;
+	cursor: pointer;
+}
+
+.Header--cart--counter {
+	height: 10px;
+	width: 10px;
+	padding: 5px;
+	background-color: violet;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 22px;
+	left: 15px;
+
+	font-size: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
