--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-around;
 	/* align-items: center; */
-	background-color: #333;
+	background-color: rgb(66, 65, 65);
 
 	padding: 20px 0;
 	color: #fff;
