--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -1,108 +1,221 @@
-.Cards {
-	/* height: 510px; */
-	background-color: rgb(41, 38, 38, 0.5);
+@media only screen and (max-width: 600px) {
+	.Cards {
+		background-color: rgb(41, 38, 38, 0.5);
+		width: 80%;
+		margin: 20px 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
 
-	width: 70%;
-	margin: 20px auto;
+	.Cards--input {
+		margin: 15px;
+		background-color: rgba(165, 154, 154, 0.2);
+		border-radius: 5px;
+		border: none;
+		padding: 5px;
+		outline: none;
+		color: white;
+	}
+	.cards--sort {
+		margin: 15px;
+		background-color: rgba(165, 154, 154, 0.2);
+		border-radius: 6px;
+		border: none;
+		padding: 8px 5px;
+		outline: none;
+		color: white;
+	}
+
+	.inputFields {
+		display: flex;
+		flex-direction: column;
+		/* justify-content: space-between; */
+	}
+
+	::placeholder {
+		font-size: 14px;
+	}
+
+	option {
+		background-color: #333;
+	}
+	li {
+		list-style-type: none;
+	}
+
+	h2 {
+		margin: 0;
+	}
+	.Cards--product {
+		display: flex;
+		justify-content: center;
+		/* align-items: center; */
+		flex-wrap: wrap;
+
+		font-family: "Roboto", sans-serif;
+		font-size: 12px;
+	}
+
+	.Cards--list {
+		margin: 10px 0;
+		background-color: rgba(185, 218, 247, 0.3);
+		color: #fff;
+		width: 220px;
+		border-radius: 10px;
+	}
+
+	.Cards--list__img {
+		display: flex;
+		justify-content: center;
+		margin: 10px;
+	}
+
+	.Cards--list__imgIn {
+		width: 100px;
+		height: 70px;
+	}
+
+	.Cards--list__name,
+	.Cards--list__size,
+	.Cards--list__color,
+	.Cards--list__price {
+		display: flex;
+		justify-content: space-evenly;
+		padding: 12px;
+	}
+	.btn {
+		display: flex;
+		justify-content: center;
+		margin: 10px;
+	}
+
+	.btn--in {
+		width: 90%;
+		padding: 8px 0;
+		border-radius: 5px;
+		outline: none;
+		border: none;
+		background-color: violet;
+		cursor: pointer;
+		color: #fff;
+		font-size: 14px;
+	}
+
+	.span--size {
+		margin: 0 2px;
+		cursor: pointer;
+	}
+	.span--color {
+		cursor: pointer;
+	}
 }
 
-.Cards--input {
-	margin: 15px;
-	background-color: rgba(165, 154, 154, 0.2);
-	border-radius: 5px;
-	border: none;
-	padding: 5px;
-	outline: none;
-	color: white;
-}
-.cards--sort {
-	margin: 15px;
-	background-color: rgba(165, 154, 154, 0.2);
-	border-radius: 6px;
-	border: none;
-	padding: 8px 5px;
-	outline: none;
-	color: white;
-}
+@media only screen and (min-width: 600px) {
+	.Cards {
+		background-color: rgb(41, 38, 38, 0.5);
+		width: 70%;
+		margin: 20px auto;
+	}
 
-.inputFields {
-	display: flex;
-	justify-content: space-between;
-}
+	.Cards--input {
+		margin: 15px;
+		background-color: rgba(165, 154, 154, 0.2);
+		border-radius: 5px;
+		border: none;
+		padding: 5px;
+		outline: none;
+		color: white;
+	}
+	.cards--sort {
+		margin: 15px;
+		background-color: rgba(165, 154, 154, 0.2);
+		border-radius: 6px;
+		border: none;
+		padding: 8px 5px;
+		outline: none;
+		color: white;
+	}
 
-::placeholder {
-	font-size: 14px;
-}
+	.inputFields {
+		display: flex;
+		justify-content: space-between;
+	}
 
-option {
-	background-color: #333;
-}
-li {
-	list-style-type: none;
-}
+	::placeholder {
+		font-size: 14px;
+	}
 
-h2 {
-	margin: 0;
-}
-.Cards--product {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
+	option {
+		background-color: #333;
+	}
+	li {
+		list-style-type: none;
+	}
 
-	font-family: "Roboto", sans-serif;
-	font-size: 12px;
-}
+	h2 {
+		margin: 0;
+	}
+	.Cards--product {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
 
-.Cards--list {
-	margin: 10px;
-	background-color: rgba(185, 218, 247, 0.3);
-	color: #fff;
-	width: 250px;
-	border-radius: 10px;
-}
+		font-family: "Roboto", sans-serif;
+		font-size: 12px;
+	}
 
-.Cards--list__img {
-	display: flex;
-	justify-content: center;
-	margin: 10px;
-}
+	.Cards--list {
+		margin: 10px;
+		background-color: rgba(185, 218, 247, 0.3);
+		color: #fff;
+		width: 250px;
+		border-radius: 10px;
+	}
 
-.Cards--list__imgIn {
-	width: 100px;
-	height: 70px;
-}
+	.Cards--list__img {
+		display: flex;
+		justify-content: center;
+		margin: 10px;
+	}
 
-.Cards--list__name,
-.Cards--list__size,
-.Cards--list__color,
-.Cards--list__price {
-	display: flex;
-	justify-content: space-evenly;
-	padding: 12px;
-}
-.btn {
-	display: flex;
-	justify-content: center;
-	margin: 10px;
-}
+	.Cards--list__imgIn {
+		width: 100px;
+		height: 70px;
+	}
 
-.btn--in {
-	width: 90%;
-	padding: 8px 0;
-	border-radius: 5px;
-	outline: none;
-	border: none;
-	background-color: violet;
-	cursor: pointer;
-	color: #fff;
-	font-size: 14px;
-}
+	.Cards--list__name,
+	.Cards--list__size,
+	.Cards--list__color,
+	.Cards--list__price {
+		display: flex;
+		justify-content: space-evenly;
+		padding: 12px;
+	}
+	.btn {
+		display: flex;
+		justify-content: center;
+		margin: 10px;
+	}
 
-.span--size {
-	margin: 0 2px;
-	cursor: pointer;
-}
-.span--color {
-	cursor: pointer;
+	.btn--in {
+		width: 90%;
+		padding: 8px 0;
+		border-radius: 5px;
+		outline: none;
+		border: none;
+		background-color: violet;
+		cursor: pointer;
+		color: #fff;
+		font-size: 14px;
+	}
+
+	.span--size {
+		margin: 0 2px;
+		cursor: pointer;
+	}
+	.span--color {
+		cursor: pointer;
+	}
 }
